# asee

./: .gitignore  DOING.md  README.md  pyproject.toml  tmp_main.sh
python/: README.md  pyproject.toml
python/src/asee/: __init__.py  biometric_client.py  capture_writer.py  compare_owner_embedding_strategies.py  curate_review_subset.py  detection_runtime.py  diagnostics.py  enroll_owner.py  facenet_recognizer.py  full_frame_capture.py  gpu_sface.py  (+26 more)
python/tests/: test_biometric_client.py  test_camera_layout.py  test_capture_writer.py  test_compare_owner_embedding_strategies.py  test_curate_review_subset.py  test_detection_runtime.py  test_diagnostics.py  test_enroll_owner.py  test_full_frame_capture.py  test_golden_review_workflow.py  test_gpu_sface.py  test_gpu_yunet.py  test_http_app.py  test_insightface_detector.py  test_model_assets.py  test_overlay.py  test_overlay_broadcaster.py  test_overlay_data.py  test_overlay_data_webrtc.py  test_owner_camera_disagreement_session.py  test_owner_embedding_experiment_matrix.py  test_owner_policy.py  test_owner_rebuild_dataset.py  test_owner_rebuild_split_experiment.py  test_owner_tilt_miss_session.py  test_relabel_owner_false_negatives.py  test_retrain_owner_embedding.py  test_room_context.py  test_server_runtime.py  test_tilted_owner_hard_positive_selector.py  test_tmp_main.py  test_tracking.py  test_triage_mixed_subject_session.py  test_triage_owner_only_false_negatives.py  test_video_server.py  test_video_server_cli.py  test_web_shell.py  test_webrtc_codec_tuning.py  test_webrtc_signaling.py  test_webrtc_video_track.py
(+49 files in other folders)
