[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "asee"
version = "0.1.0"
description = "Agentic seeing backend for camera recognition and biometric status"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9.0",
  "aiortc>=1.9.0",
  "av>=11.0.0",
  "flask>=3.1.0",
  "numpy>=2.2.4",
  "opencv-python-headless>=4.11.0.86",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "mypy>=1.11.2",
  "ruff>=0.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["asee"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
